--- a/less/global.less
+++ b/less/global.less
@@ -41,6 +41,9 @@ img {
 
 .container {
   max-width: 800px;
+  @media @mobile{
+    width: 90%;
+  }
   width: 100%;
   margin: 0 auto;
 }
